# yujiezhou001-llm-zoomcamp-monitoring

./: Dockerfile  Makefile  README.md  app.py  assistant.py  dashboard.py  db_init.py  db_query.py  db_save.py  docker-compose.yaml  generate_data.py  judge.py  llm-monitoring.ipynb  main.py  metrics.py  pyproject.toml
